@@ -106,6 +106,8 @@ static const decode_table_t oDecodeTable[] =
   { "CMP", DTABLE_CALLBACK_VOID | DTABLE_PART_MNEMONIC, { .vd = m_cmp } }, /* CMP CC SP */
   { "CN", DTABLE_CALLBACK_SYMBOL, { .sym = c_cn } }, /* CN */
   { "CNF", DTABLE_CALLBACK_VOID | DTABLE_PART_MNEMONIC, { .vd = m_cnf } }, /* CNF CC or CNFE CC */
+  { "CODE16", DTABLE_CALLBACK_VOID, { .vd = c_code16 } }, /* CODE16 */
+  { "CODE32", DTABLE_CALLBACK_VOID, { .vd = c_code32 } }, /* CODE32 */
   { "COS", DTABLE_CALLBACK_VOID | DTABLE_PART_MNEMONIC, { .vd = m_cos } }, /* COS CC P R */
   { "CP", DTABLE_CALLBACK_SYMBOL, { .sym = c_cp } }, /* CP */
   { "DCB", DTABLE_CALLBACK_VOID, { .vd = c_dcb } }, /* DCB */
